@@ -959,7 +959,7 @@ static struct Damage battle_calc_weapon_attack(
 		if (battle_config.skillrange_by_distance &&
 			(src->type&battle_config.skillrange_by_distance)
 		) { //based on distance between src/target [Skotlex]
-			if (check_distance_bl(src, target, 3))
+			if (check_distance_bl(src, target, 5))
 				wd.flag=(wd.flag&~BF_RANGEMASK)|BF_SHORT;
 			else
 				wd.flag=(wd.flag&~BF_RANGEMASK)|BF_LONG;
@@ -2204,7 +2204,7 @@ struct Damage battle_calc_magic_attack(
 	if (battle_config.skillrange_by_distance &&
 		(src->type&battle_config.skillrange_by_distance)
 	)	{ //based on distance between src/target [Skotlex]
-		if (check_distance_bl(src, target, 3))
+		if (check_distance_bl(src, target, 5))
 			ad.flag=(ad.flag&~BF_RANGEMASK)|BF_SHORT;
 		else
 			ad.flag=(ad.flag&~BF_RANGEMASK)|BF_LONG;
@@ -2581,7 +2581,7 @@ struct Damage  battle_calc_misc_attack(
 	if (battle_config.skillrange_by_distance &&
 		(src->type&battle_config.skillrange_by_distance)
 	) { //based on distance between src/target [Skotlex]
-		if (check_distance_bl(src, target, 3))
+		if (check_distance_bl(src, target, 5))
 			md.flag=(md.flag&~BF_RANGEMASK)|BF_SHORT;
 		else
 			md.flag=(md.flag&~BF_RANGEMASK)|BF_LONG;
